--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -26,8 +26,13 @@
 
             </nav>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="">Details<span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="__ROOT__/admin.php/Index/index">Manage Content<span class="sr-only">(current)</span></a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="__ROOT__/admin.php/Login/index">Log in<span class="sr-only">(current)</span></a></li>
                 </ul>
             </div>
         </nav>
@@ -35,7 +40,7 @@
             <div class="line"></div>
 
         <!-- SlideShow -->
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval='1000'>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval='2000'>
               <!-- Indicators -->
               <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -48,31 +53,31 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="../Public/images/o.jpg" alt="...">
+                  <img src="../Public/images/a.jpg" alt="...">
                   <div class="carousel-caption">
                     ...
                   </div>
                 </div>
                 <div class="item">
-                  <img src="../Public/images/n.jpg" alt="...">
+                  <img src="../Public/images/b.jpg" alt="...">
                   <div class="carousel-caption">
                     ...
                   </div>
                 </div>
                 <div class="item">
-                  <img src="../Public/images/q.jpg" alt="...">
+                  <img src="../Public/images/c.jpg" alt="...">
                   <div class="carousel-caption">
                     ...
                   </div>
                 </div>
                 <div class="item">
-                  <img src="../Public/images/p.jpg" alt="...">
+                  <img src="../Public/images/d.jpg" alt="...">
                   <div class="carousel-caption">
                     ...
                   </div>
                 </div>
                 <div class="item">
-                  <img src="../Public/images/t.jpg" alt="...">
+                  <img src="../Public/images/e.jpg" alt="...">
                   <div class="carousel-caption">
                     ...
                   </div>
