--- a/Admin/Tpl/Story/edit.html
+++ b/Admin/Tpl/Story/edit.html
@@ -1,21 +1,22 @@
 <extend name='Index:index'/>
 
 <block name='right'>
-    <form action="__URL__/insert" method="post">
+    <form action="__URL__/update" method="post">
         <div class="form-group">
             <label for="">Author:</label>
-            <input type="text" name="username" class="form-control">
+            <input type="text" name="username" class="form-control" value="<{$row['username']}>">
         </div>
 
         <div class="form-group">
             <label for="">Title</label>
-            <input type="text" name="title" class="form-control">
+            <input type="text" name="title" class="form-control" value="<{$row['title']}>">
         </div>
 
         <div class="form-group">
             <label for="">Content:</label>
             <textarea name="content" rows="13" class="form-control content"></textarea>
         </div>
+        <input type="hidden" name="id" value="<{$row['id']}>">
         <div class="form-group">
             <input type="submit" value="Push" class="btn btn-primary">
             <input type="reset" value="Cancel" class="btn btn-danger">
