--- a/Admin/Tpl/User/add.html
+++ b/Admin/Tpl/User/add.html
@@ -2,17 +2,18 @@
 <block name='right'>
     <div class="container">
         <div class="panel">
-        <form action="__URL__/update" method="post">
+        <form action="__URL__/insert" method="post">
             <div class="form-group">
                 <label>Username:</label>
-                <input type="text" name="username" class="form-control" value="<{$row['username']}>">
+                <input type="text" name="username" class="form-control" placeholder="username">
             </div>
 
             <div class="form-group">
                 <label>Password:</label>
                 <input type="text" name="password" class="form-control" placeholder="password">
             </div>
-            <input type="hidden" name="id" value="<{$row['id']}>">
+
+
             <div class="form-group">
                 <input type="submit" name="submit" class="btn btn-primary" value="Submit">
                 <input type="reset" name="reset" class="btn btn-danger" value="Cancel">
