--- a/Admin/Tpl/Index/index.html
+++ b/Admin/Tpl/Index/index.html
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="__ROOT__/admin.php/Index/index">Back Page</a>
+              <a class="navbar-brand" href="__ROOT__/index.php/Index/index">Home Page</a>
             </div>
             <nav class="menu">
 
@@ -55,7 +55,6 @@
                     <div class="jumbotron">
                         <h3>Welcome to Arthur's World!</h3>
                         <p>This is a place for Arthur and Rachel's love story,they fell in love in the Christmas of 2016,and they want to record their stories.</p>
-                        <a href="__ROOT__/index.php/Index/index" class="btn btn-primary" target="_blank">Home</a>
                     </div>
                 </block>
             </div>
